deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeforphilly
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: codeforphilly
