deploy/kustomize/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: codeforphilly
spec:
  parentRefs:
    - name: codeforphilly
  hostnames:
    - PLACEHOLDER_HOST
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: codeforphilly
          port: 80
